v3.8.2 (XXXX-XX-XX)
-------------------

* Fixed a bug for array indexes on update of documents (BTS-548).

* Fixed BTS-562: reduce-extraction-to-projection optimization returns null for
  one attribute if nested attributes are named the same.

* Prevent stealing of values from AQL const value registers. This fixes an issue
  for queries that produce constant results (known at query compile time) when
  the queries are executed directly on a DB server in a cluster (which is not
  supported, but may happen for troubleshooting).

* Avoid the acquisition of a recursive read lock on server shutdown, which
  could in theory lead to shutdown hangs at least if a concurrent thread is
  trying to modify the list of collections (very unlikely and never observed
  until now).

* Fix active failover, so that the new host actually has working foxx services
  (BTS-558).

* Fixed issue #14720: Bulk import ignores onDuplicate in 3.8.0.
  The "onDuplicate" attribute was ignored by the `/_api/import` REST API when
  not specifying the "type" URL parameter.

* Fix internal iterator states after intermediate commits in write transactions.
  Iterators could point to invalid data after an intermediate commit, producing
  undefined behavior.
  
* Fix read-own-write behavior in different scenarios:
    - in some cases writes performed by an AQL query could be observed within
      the same query. This was not intended and is fixed now.
    - AQL queries in streaming transactions could observe their own writes in
      even more cases, which could potentially result in an endless loop when
      the query iterates over the same collection that it is inserting documents
      into.
    - UPSERT did not find documents inserted by a previous iteration if the
      subquery relied on a non-unique secondary index.
    - disabled intermediate commits for queries with UPSERTs, because
      intermediate commits can invalidate the internal read-own-write iterator