@@ -1,6 +1,10 @@
 v3.8.2 (XXXX-XX-XX)
 -------------------
 
+* Fix issue #14807: Fix crash during optimization of certain AQL queries during
+  the removeCollectVariables optimizer rule, when a COLLECT node without output
+  variables (this includes RETURN DISTINCT) occured in the plan.
+
 * Fixed a bug for array indexes on update of documents (BTS-548).
 
 * Fixed BTS-562: reduce-extraction-to-projection optimization returns null for
